# onprem-inference-deployment

./: .gitignore  README.md  docker-compose.yml
api-service/: Dockerfile  gunicorn_conf.py  pyproject.toml  start.sh
api-service/app/: main.py
api-service/app/public/simple_webrtc/: index.html
api-service/app/public/simple_webrtc/js/: main.js
deployment/configs/dcgm_exporter/: default-counters.csv
deployment/configs/grafana/: grafana.ini
deployment/configs/grafana/dashboards/: InferenceRate.json
deployment/configs/grafana/provisioning/dashboards/: all.yml
deployment/configs/grafana/provisioning/datasources/: all.yml
deployment/configs/nginx/: nginx.conf
deployment/configs/prometheus/: prometheus.yml
model-samples/: pyproject.toml
model-samples/fastrcnn/: config.txt  deploy  index_to_name.json  model.py
torchserve/: prod_image_build
torchserve/builder/: Dockerfile
