[tool.poetry]
name = "api-service"
version = "0.1.0"
description = ""
authors = ["Ryan Anderson <ryan@anderson.vc>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.13.4"
fastapi = "^0.63.0"
asyncio = "^3.4.3"
httpx = "^0.17.1"
python-multipart = "^0.0.5"
gunicorn = "^20.1.0"
uvloop = "^0.15.2"
httptools = "^0.1.1"
aiofiles = "^0.6.0"
websockets = "^8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
