[tool.poetry]
name = "model-samples"
version = "0.1.0"
description = ""
authors = ["Ryan Anderson <ryan@anderson.vc>"]

[tool.poetry.dependencies]
python = "^3.8"
torch-model-archiver = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
